--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@clerk/clerk-js": "^5.11.0",
+    "@clerk/clerk-react": "^5.3.0",
+    "@headlessui/react": "^2.1.2",
+    "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/stripe-js": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,11 +16,15 @@
     "client": "file:",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-card-flip": "^1.2.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-ui-animate": "^3.3.3",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
